# llm-edge-ai

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  IMPROVEMENTS.md  MQTT_SIMULATION.md  Makefile  README.md  device_simulator.py  docker-compose.yml  generate-compose.py  mqtt_consumer.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
config/: README.md  config.json  mosquitto.conf
dataset/: README.md
docs/: EXAMPLE_MODEL_COMPARISON.md  IMPLEMENTATION_SUMMARY.md  LLM_INFERENCE.md  QUICKSTART_LLM.md  QUICK_REFERENCE.md
edge-device-01/: README.md  config.json
edge-device-02/: README.md  config.json
edge-device-03/: README.md  config.json
edge-device-04/: README.md  config.json
edge-device-05/: README.md  config.json
edge-device-06/: README.md  config.json
edge-device-07/: README.md  config.json
edge-device-08/: README.md  config.json
edge-device-09/: README.md  config.json
edge-device-10/: README.md  config.json
metrics/: README.md
scripts/: analyze_metrics.py  generate-compose.py
src/: __init__.py  device_simulator.py  generate_compose.py  llm_inference.py  mqtt_consumer.py
tests/: README.md  __init__.py  test_consumer.py  test_generate_compose.py  test_simulator.py
